--- a/data-peribadi.html
+++ b/data-peribadi.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div>
-        
+        <h1>MAKLUMAT PERIBADI</h1>
+        <p>NAMA: Nurul Aisyah Binti AHmad</p>
+        <p>ALAMAT: No.22, Jalan Impian Jaya, Taman Impian Jaya, 43000 Kajang, Selangor</p>
+        <p>TELEFON: 012-3456789</p>
+        <p>E-MEL: nurul.aisyah@email.com</p>
     </div>
     
 </body>
