--- a/data-peribadi.html
+++ b/data-peribadi.html
@@ -6,7 +6,7 @@
     <title>Data Peribadi</title>
 </head>
 <body>
-    <div>
+    <div style="background-color: brown;">
         <h1>MAKLUMAT PERIBADI</h1>
         <p>NAMA: Nurul Aisyah Binti AHmad</p>
         <p>ALAMAT: No.22, Jalan Impian Jaya, Taman Impian Jaya, 43000 Kajang, Selangor</p>
