--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Peribadi</title>
 </head>
-<body>
+<body style="background-color: bisque;">
     <h1>resume</h1>
     <p>PELAJAR HEBAT</p>
     
